--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.1",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
@@ -16,7 +17,7 @@
   "scripts": {
     "build:css": "postcss src/styles/index.css -o src/styles/tailwind.css",
     "watch:css": "postcss src/styles/index.css -o src/styles/tailwind.css --watch",
-    "react-scripts:start": "sleep 5 && react-scripts",
+    "react-scripts:start": "sleep 5 && react-scripts start",
     "start": "run-p watch:css react-scripts:start",
     "build": "run-s build:css react-scripts:build",
     "test": "react-scripts test",
@@ -41,7 +42,7 @@
     ]
   },
   "devDependencies": {
-    "postcss": "^8.4.5",
+    "postcss-cli": "^9.1.0",
     "tailwindcss": "^3.0.8"
   }
 }
