--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
-    "@mui/material": "^5.2.6",
+    "@material-ui/core": "^4.12.3",
+    "@mui/material": "^5.2.7",
     "@mui/styled-engine-sc": "^5.1.0",
     "@mui/styles": "^5.2.3",
     "@testing-library/jest-dom": "^5.16.1",
